--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1460,3 +1460,198 @@ header {
     }
   }
 }
+
+/*Sermons*/
+
+
+
+.block-sermons {
+  margin-top: 128px;
+  margin-bottom: 208px;
+  text-align: center;
+
+  .block-sermons1 {
+    padding-left: 270px;
+    padding-right: 270px;
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 64px;
+    letter-spacing: -0.01em;
+    text-transform: uppercase;
+    color: #161722;
+  }
+
+  a {
+    padding-top: 48px;
+    position: absolute;
+    right: 110px;
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 32px;
+    color: #161722;
+    text-decoration: none;
+  }
+}
+
+.block-sermons2 {
+  
+  max-width: 1280px;
+  width: 100%;
+  padding-top: 64px;
+  text-align: left;
+  margin-left: 15px;
+  margin-right: 30px;
+}
+
+.info-sermons {
+  align-items: center;
+  position: relative;
+  display: inline-block;
+  
+  width: 230px;
+  height: 424px;
+
+  background-color: #FFF5EB;
+  padding-right: 30px;
+  padding-left: 30px;
+  margin-right: 24px;
+  &:last-of-type{
+    margin-right: 0;
+  }
+  &:hover::after {
+    content: "";
+    position: absolute;
+    bottom: -16px;
+    left: 0;
+    bottom: 0px;
+    width: 100%;
+    height: 16px;
+    background: #FFD0A0;
+    transform: matrix(1, 0, 0, -1, 0, 0);
+  }
+  
+
+  h5 {
+    margin-top: 16x;
+  }
+
+  p {
+    margin-top: 16px;
+  }
+
+  .date {
+    display: flex;
+    font-size: 20px;
+    text-align: right;
+    flex-direction: column;
+
+    h5 {
+      padding: 0px;
+      margin: 0px;
+      padding-top: 24px;
+      font-family: 'Roboto Condensed';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 24px;
+      line-height: 28px;
+      letter-spacing: -0.01em;
+      text-transform: uppercase;
+      color: #161722;
+    }
+
+    span {
+      font-family: 'Roboto Condensed';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 19px;
+      text-transform: uppercase;
+      color: #161722;
+    }
+  }
+
+  button {
+    margin-top: 20px;
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 16px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFD2A4;
+    display: flex;
+    flex-direction: row;
+    padding: 24px 64px;
+    gap: 16px;
+    background: #161722;
+    backdrop-filter: blur(40px);
+    border-radius: 12px;
+    border: none;
+  }
+}
+
+.info-sermons .text-sermons {
+  margin-top: -21px;
+
+  span {
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+    background: linear-gradient(109.61deg, #A54E2B -53.83%, #DC9853 62.61%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+  }
+
+  h5 {
+    margin-top: 16px;
+    margin-bottom: 16px;
+    width: 250px;
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: -0.01em;
+    text-transform: uppercase;
+    color: #161722;
+  }
+
+  p {
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #161722;
+    opacity: 0.78;
+  }
+}
+
+.icon-and-time1,
+.icon-and-location1 {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #161722;
+  display: flex;
+  align-items: center;
+  margin-top: -20px;
+
+  p {
+    text-align: left;
+    padding-left: 16px;
+  }
+}
